update gravatar and fonts can

--- a/public/theme/material/css/custom.css
+++ b/public/theme/material/css/custom.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.gmirror.org/css?family=Material+Icons);
+@import url(https://cdn.moefont.com/fonts/css?family=Material+Icons);
 
 
 .pagination {
